# C-C-

./: .gitignore  CMakeLists.txt  README.md
proj1/: CMakeLists.txt
proj1/src/: Hello.cpp  Hello.h
proj2/: CMakeLists.txt
proj2/src/: main.cpp
